--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -31,6 +31,7 @@ body {
 h1, h2, h3, h4, p, li, ul, span, a, button {
   list-style-type: none;
   text-decoration: none;
+  font-family: 'Space Mono', monospace;
 }
 
 h1 {
@@ -52,6 +53,12 @@ h4 {
 
 p {
   line-height: 2.5rem;
+  font-size: var(--paragraph-mobile);
+}
+
+button {
+  border: none;
+  background-color: transparent;
   font-size: var(--paragraph-mobile);
 }
 
@@ -91,5 +98,55 @@ p {
   color: #4B6A9B;
   font-weight: bold;
   letter-spacing: 0.25rem;
+}
+
+.search-container {
+  background-color: #FEFEFE;
+  border-radius: 15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  cursor: pointer;
+  margin-top: 4rem;
+}
+
+.search-container .search-icon {
+  padding-left: 1.6rem;
+  cursor: pointer;
+}
+
+.search-container .search-text {
+  font-size: 1.1rem;
+  color: #4B6A9B;
+  cursor: pointer;
+}
+
+.search-container .search-button {
+  cursor: pointer;
+}
+
+.search-container .search-button button {
+  background-color: #0079FF;
+  color: #FFFFFF;
+  font-size: 1.4rem;
+  font-weight: bold;
+  padding: 1.2rem 1.4rem;
+  border-radius: 10px;
+  margin: 0.7rem 0.7rem 0.7rem;
+  margin-left: 0;
+  cursor: pointer;
+}
+
+.main-container {
+  background-color: #FEFEFE;
+  padding: 3.2rem 2.4rem 4.8rem 2.4rem;
+  border-radius: 15px;
+  margin: 1.6rem 0 3.2rem 0;
 }
 /*# sourceMappingURL=styles.css.map */
