--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -145,8 +145,125 @@ button {
 
 .main-container {
   background-color: #FEFEFE;
-  padding: 3.2rem 2.4rem 4.8rem 2.4rem;
+  padding: 3.2rem 2rem 4.8rem 2.4rem;
   border-radius: 15px;
   margin: 1.6rem 0 3.2rem 0;
+}
+
+.main-container .upper-main-subcontainer .main-info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 2rem;
+  margin-bottom: 3.4rem;
+}
+
+.main-container .upper-main-subcontainer .main-info .profile-picture {
+  height: 7rem;
+  width: 7rem;
+  background-color: yellow;
+}
+
+.main-container .upper-main-subcontainer .main-info .personal-info .name {
+  font-size: 1.6rem;
+}
+
+.main-container .upper-main-subcontainer .main-info .personal-info .handle {
+  color: #0079FF;
+}
+
+.main-container .upper-main-subcontainer .main-info .personal-info .join-date {
+  color: #697C9A;
+}
+
+.main-container .upper-main-subcontainer .bio-container {
+  margin-bottom: 2.3rem;
+}
+
+.main-container .upper-main-subcontainer .bio-container .bio {
+  color: #4B6A9B;
+}
+
+.main-container .lower-main-subcontainer .stats-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #F6F8FF;
+  padding: 1rem;
+  border-radius: 10px;
+  margin-bottom: 2.4rem;
+}
+
+.main-container .lower-main-subcontainer .stats-container .stat-item {
+  position: relative;
+}
+
+.main-container .lower-main-subcontainer .stats-container .stat-item .stats-heading {
+  color: #4B6A9B;
+  font-size: 1.1rem;
+  font-weight: lighter;
+}
+
+.main-container .lower-main-subcontainer .stats-container .stat-item .stat {
+  font-size: 1.6rem;
+  color: #2B3442;
+  margin: 0 auto;
+}
+
+.main-container .lower-main-subcontainer .stats-container .stat-item .stat-1 {
+  width: 25%;
+}
+
+.main-container .lower-main-subcontainer .stats-container .stat-item .stat-2 {
+  width: 60%;
+}
+
+.main-container .lower-main-subcontainer .stats-container .stat-item .stat-3 {
+  width: 25%;
+}
+
+.main-container .lower-main-subcontainer .link-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
+  gap: 1rem;
+}
+
+.main-container .lower-main-subcontainer .link-container .link {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 2rem;
+}
+
+.main-container .lower-main-subcontainer .link-container .link .link-paragraph {
+  color: #4B6A9B;
 }
 /*# sourceMappingURL=styles.css.map */
