--- a/app/css/_globals.scss
+++ b/app/css/_globals.scss
@@ -44,7 +44,7 @@ body {
     padding: 3.1rem 2.4rem;
 }
 
-h1, h2, h3, h4, p, li, ul, span, a, button {
+h1, h2, h3, h4, p, li, ul, span, a, button, input {
     list-style-type: none;
     text-decoration: none;
     font-family: 'Space Mono', monospace;;
@@ -81,4 +81,11 @@ button {
 
 .hide-for-mobile {
     display: none;
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance:none;
 }
