--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -28,7 +28,7 @@ body {
   padding: 3.1rem 2.4rem;
 }
 
-h1, h2, h3, h4, p, li, ul, span, a, button {
+h1, h2, h3, h4, p, li, ul, span, a, button, input {
   list-style-type: none;
   text-decoration: none;
   font-family: 'Space Mono', monospace;
@@ -64,6 +64,13 @@ button {
 
 .hide-for-mobile {
   display: none;
+}
+
+input[type="search"]::-webkit-search-decoration,
+input[type="search"]::-webkit-search-cancel-button,
+input[type="search"]::-webkit-search-results-button,
+input[type="search"]::-webkit-search-results-decoration {
+  -webkit-appearance: none;
 }
 
 .header-container {
@@ -124,7 +131,46 @@ button {
 .search-container .search-text {
   font-size: 1.1rem;
   color: #4B6A9B;
+  border: none;
   cursor: pointer;
+}
+
+.search-container #search {
+  border: none;
+  outline: none;
+  width: 54%;
+}
+
+.search-container #search::-webkit-input-placeholder {
+  color: #4B6A9B;
+}
+
+.search-container #search:-ms-input-placeholder {
+  color: #4B6A9B;
+}
+
+.search-container #search::-ms-input-placeholder {
+  color: #4B6A9B;
+}
+
+.search-container #search::placeholder {
+  color: #4B6A9B;
+}
+
+.search-container #search::-webkit-input-placeholder:active {
+  border: none;
+}
+
+.search-container #search:-ms-input-placeholder:active {
+  border: none;
+}
+
+.search-container #search::-ms-input-placeholder:active {
+  border: none;
+}
+
+.search-container #search::placeholder:active {
+  border: none;
 }
 
 .search-container .search-button {
@@ -140,6 +186,19 @@ button {
   border-radius: 10px;
   margin: 0.7rem 0.7rem 0.7rem;
   margin-left: 0;
+  cursor: pointer;
+}
+
+.search-container .search-button #submit {
+  background-color: #0079FF;
+  color: #FFFFFF;
+  font-size: 1.4rem;
+  font-weight: bold;
+  padding: 1.2rem 1.4rem;
+  border-radius: 10px;
+  margin: 0.7rem 0.7rem 0.7rem;
+  margin-left: 0;
+  border: none;
   cursor: pointer;
 }
 
