--- a/app/css/_header.scss
+++ b/app/css/_header.scss
@@ -1,4 +1,7 @@
 .header-container {
+    .logo {
+        color: #222731;
+    }
     display: flex;
     justify-content: space-between;
     align-items: center;
