small changes (fixed cursor color on dark theme)

--- a/app/css/_globals.scss
+++ b/app/css/_globals.scss
@@ -19,7 +19,7 @@ $darkBlue: #1E2A47;
 
 html {
     font-size: 62.5%;
-    font-family: 'Space Mono', monospace;;
+    font-family: 'Space Mono', monospace;
     scroll-behavior: smooth;
     overflow-x: hidden;
     position: relative;
