--- a/app/css/_main.scss
+++ b/app/css/_main.scss
@@ -20,6 +20,7 @@
         border: none;
         outline: none;
         width: 54%;
+        background: transparent;
         &::placeholder {
             color: $greyBlue;
             background-color: $white;
